fix(build): java-8 support.