@@ -2,6 +2,7 @@ package io.prometheus.jmx.test.support;
 
 import java.util.function.Consumer;
 import org.testcontainers.containers.output.OutputFrame;
+import org.testcontainers.shaded.org.apache.commons.lang3.StringUtils;
 
 /** Class to implement SystemOutOutputFrameLogger */
 public class TestContainerLogger implements Consumer<OutputFrame> {
@@ -18,7 +19,7 @@ public class TestContainerLogger implements Consumer<OutputFrame> {
     public void accept(OutputFrame outputFrame) {
         if (outputFrame != null) {
             String string = outputFrame.getUtf8StringWithoutLineEnding().trim();
-            if (!string.isBlank()) {
+            if (!StringUtils.isBlank(string)) {
                 System.out.println("> " + string);
             }
         }
